#234520 Bulk edit - Closing reason

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -2946,7 +2946,8 @@ body.login {
 }
 
 .modal.modalBulkCaseEdit .modal-body {
-    overflow-x: hidden;
+    overflow-x: visible;
+    overflow-y: visible;
 }
 /**************************** Validation **************************************************/
 
