--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -122,7 +122,7 @@
                     }
                     else
                     {
-                        <div id="textExternalOuter" style="width: 100%; height:100%">
+                        <div id="textExternalOuter" style="width: 100%; height:100%; min-width: 320px; min-height: 200px">
                             @Html.TextAreaFor(model => Model.CaseLog.TextExternal, new { @class = "summernoteexternal", @readonly = true })
                         </div>
                     }
