--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -1292,3 +1292,14 @@ div .multitext i {
     resize: both;
     word-break: break-word;
 }
+
+/*SUMMERNOTE*/
+
+.note-editor {
+    margin-bottom: 5px !important;
+}
+
+    .note-editor.error {
+        border: 1px solid #ff0000 !important;
+        background-color: #ffeeee !important;
+    }
