--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -725,6 +725,10 @@ a.error, input[type=¨button].error .btn {
     background-color: #438eb9;
 }
 
+.modal-backdrop, .modal-backdrop.in {
+    display: none;
+}
+
 .mapText {
     color: #fff;
     /*white-space: nowrap;*/
