# 218251 - Task - E-mail templates - Merge cases - new closing email and tags

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -2168,7 +2168,7 @@
                                                     @CaseFieldCaption(GlobalEnums.TranslationCaseFields.ClosingReason, "Avslutsorsak")
                                                 </td>
                                                 <td>
-                                                    @Model.FinishingCause
+                                                    @Translation.GetCoreTextTranslation(@Model.FinishingCause)
                                                 </td>
                                                 <td></td>
                                             </tr>
